Directiva v-model + destructuring

--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 
     <!-- Vue tiene Control absoluto de este div -->
     <div id="myApp">
-    
+        <h1>Phrases of Life</h1>
+
+        <ul>
+            <li v-for="({ quote, author }, index) in quotes">
+                <span>{{index + 1}}. {{ quote }}</span>
+                <blockquote>{{ author }}</blockquote>
+            </li>
+        </ul>
+
+
     </div>
 
 
