--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <div id="myApp">
         <h1>Phrases of Life</h1>
 
+        <input
+          type="text"
+          v-model="newQuote"
+          v-on:keypress.enter="addQuote">
+        <hr> <!--  Linea negra -->
+
         <ul>
             <li v-for="({ quote, author }, index) in quotes">
                 <span>{{index + 1}}. {{ quote }}</span>
